@startuml
left to right direction
skinparam roundcorner 5
skinparam linetype ortho
skinparam shadowing false
skinparam handwritten false

skinparam class {
    BackgroundColor white
    ArrowColor #2688d4
    BorderColor #2688d4
}

!define primary_key(x) <b><color:#b8861b><&key></color> x</b>
!define foreign_key(x) <color:#aaaaaa><&key></color> x
!define column(x) <color:#efefef><&media-record></color> x
!define table(x) entity x << (T, white) >>

table( user ) {
  primary_key( id ): UUID
  column( username ): STRING
  column( password ): STRING
  column( email ): STRING
  column( email_verified ): BOOLEAN
  column( created ): TIMESTAMP
  column( modified ): TIMESTAMP
}

table( user_role ) {
  primary_key( id ): UUID
  column( created ): TIMESTAMP
  column( modified ): TIMESTAMP
  foreign_key( user_id ): UUID <<FK>>
  foreign_key( role_id ): UUID <<FK>>
}

table( role ) {
  primary_key( id ): UUID
  column( name ): STRING
  column( created ): TIMESTAMP
  column( modified ): TIMESTAMP
}

table( history ) {
  primary_key( id ): UUID
  column( ip_address ): STRING
  column( browser ): STRING
  column( created ): TIMESTAMP
  foreign_key( user_id ): UUID <<FK>>
}

user ||--|{ user_role
user ||--|{ history
role ||--|{ user_role

@enduml